<!--
  ~ /*
  ~  * Created by Murillo Comino on 09/02/19 12:26
  ~  * Github: github.com/MurilloComino
  ~  * StackOverFlow: pt.stackoverflow.com/users/128573
  ~  * Email: murillo_comino@hotmail.com
  ~  *
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 09/02/19 12:03
  ~  */
  -->
<resources>
    <string name="app_name" translatable="false">MUnote</string>

    <string name="operation_cancel">Operation cancel</string>
    <string name="title_invoice">Payments Card</string>
    <string name="btn_picture">Take a Picture</string>
    <string name="error_folder_creater">Error: Folder not found</string>
    <string name="warning_install_es_file_explorer">Please install ES File Explorer</string>

    <string name="title_gallery">Gallery</string>

    <string name="title_menu">Menu</string>
    <string name="title_card_edit">Edit Credit Card</string>
    <string name="title_card_add">Add Credit Card</string>
    <string name="title_bank">Edit Bank</string>

    <string name="tv_add">Add</string>
    <string name="tv_edit">Edit</string>

    <string name="tv_desc_card">Card Description:</string>
    <string name="et_desc_card" translatable="false">Ex: VisaCard</string>

    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_clear">Clear</string>

    <string name="alert_title_cancel">Cancel</string>
    <string name="alert_message_return">Do you really want to cancel?</string>
    <string name="alert_ok">Yes</string>
    <string name="alert_cancel">No</string>
    <string name="toast_desc_card">Card Description:  Is required</string>

    <string name="cb_credit">Credit</string>
    <string name="cb_debit">Debit</string>
    <string name="text_cred_deb">Credit and Debit</string>
    <string name="toast_cb_checked">Credit/Debit: At least one marking is required</string>
    <string name="title_card">Card</string>
    <string name="tv_delete">Delete</string>
    <string name="alert_title_delete">Warning</string>
    <string name="alert_message_delete">Do you really want to delete?</string>
    <string name="alert_title_update">Update</string>
    <string name="alert_message_update">Do you really want to update the Card?</string>
    <string name="error_picture">Error! Try again.</string>
    <string name="title_add_invoice">Add Payments</string>
    <string name="tv_desc_invoice">Description:</string>
    <string name="tv_title_invoice">Title:</string>
    <string name="et_title_invoice">Ex: Corner Cafe</string>
    <string name="et_desc_invoice">Ex: 2 Coffees</string>
    <string name="tv_invoice_card">Choose Card:</string>
    <string name="tv_value">Value</string>
    <string name="et_value">0.00</string>
    <string name="tv_pay_date">Payment Date:</string>
    <string name="tv_select_date">Select</string>
    <string name="tv_choose_card">Choose a Card…</string>
    <string name="toast_ll_hint_spinner_enabled">You need to choose a Card</string>
    <string name="toast_title_invoice">Title: Is required</string>
    <string name="toast_value_required">Price: Is required</string>
    <string name="toat_select_date">Select a Date: Is required</string>
    <string name="tv_price">$ </string>
    <string name="month_janeiro">January</string>
    <string name="month_fevereiro">February</string>
    <string name="month_março">March</string>
    <string name="month_abril">April</string>
    <string name="month_maio">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_agosto">August</string>
    <string name="month_setembro">September</string>
    <string name="month_outubro">October</string>
    <string name="month_novembro">November</string>
    <string name="month_dezembro">December</string>
    <string name="tv_click_to_view">Click on the image to view it</string>
    <string name="tv_card_deleted">Registered card deleted</string>
    <string name="tv_no_card">No registered card</string>
    <string name="tv_no_invoice">No registered payment</string>
    <string name="message_register_card">You need to register a card first</string>
    <string name="cb_string_creditdebit">Credit Debit</string>
    <string name="desc_card">Card:</string>
    <string name="desc_date">Date:</string>
    <string name="title_edit_notes">Edit Payments</string>
    <string name="alert_message_update_invoice">Do you really want to update the payments?</string>
    <string name="alert_register_card">You don\'t have a registered card. Do you want to register a card?</string>
    <string name="title_registered_card">Registered Cards</string>
    <string name="install_ES_File">Please install the ES File Explorer</string>
    <string name="desc_installments">Installments:</string>
    <string name="text_year">Year:</string>
    <string name="text_month">Month:</string>
    <string name="text_both">Both</string>

    <string name="text_total">Total:</string>
    <string name="text_day">Day</string>
    <string name="text_title_description">Title / Description</string>
    <string name="text_desc_ib_photo">Image taken from receipt</string>
    <string name="text_desc_title_notes">Title of the payment</string>
    <string name="text_desc_price_notes">Amount charged</string>
    <string name="text_desc_desc_notes">Payment description</string>
    <string name="text_desc_card">Card description</string>

    <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
    <!-- My AdMob App ID: ca-app-pub-4422707170557261~6064834767 -->

    <string name="adAPPId" translatable="false">ca-app-pub-4422707170557261~5998275173</string>
    <!-- Sample AdMob Unit ID: ca-app-pub-3940256099942544/6300978111 -->
    <!-- My AdMob Unit ID: ca-app-pub-4422707170557261/3492186905 -->
    <string name="adUnitId" translatable="false">ca-app-pub-4422707170557261/3818123950</string>
    <string name="all_cards">All Cards</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="sorted_by_title">sorted by title</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="sorted_by_day">sorted by day</string>
    <string name="sort_by_price">Sort by Price</string>
    <string name="sort_by_day">Sort by Day</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="text_in">in</string>
    <string name="text_cb_terms">Accept the terms</string>
    <string name="title_dialog_terms">Data collection and use.</string>
    <string name="message_dialog_terms">By accepting the terms you agree to the following information:\n\nMUnote collects payment information and Card names used by the user. Such information is for the exclusive use of the user, the Application works offline, so the information collected will be used by MUnote APP only for the control and management of expenses and they are stored only on the user\'s device. None of this information will be shared with any server or third party.</string>
    <string name="text_ok" translatable="false">OK</string>
    <string name="text_date">Date</string>
    <string name="text_sort">Sort</string>
    <string name="text_accept_permission">You must accept the permissions before</string>
    <string name="btn_request_permission">Add Permission</string>
    <string name="text_permission_granted">Permission granted successfully</string>
    <string name="text_dialog_permission">We need take picture, read and write on external storage for performing necessary task. Please permit the permission through Settings screen.\n\nSelect Permissions -> Enable permission</string>
    <string name="text_permit_manually">Permit Manually</string>
    <string name="toast_necessary_accept">To continue you must accept the terms</string>

</resources>