<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Created by Murillo Comino on 09/02/19 12:26
  ~  * Github: github.com/MurilloComino
  ~  * StackOverFlow: pt.stackoverflow.com/users/128573
  ~  * Email: murillo_comino@hotmail.com
  ~  *
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 09/02/19 12:03
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="0dp">

            <TextView
                style="@style/Text_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_day"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/celula_title_notas"
                style="@style/Text_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_description"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/celula_price_notas"
                style="@style/Text_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_value"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_note_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawSelectorOnTop="true">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundEditext"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                style="@style/Text_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_total"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:id="@+id/tv_symbol1"
                style="@style/Text_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <View
                android:layout_width="5dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_total"
                style="@style/Text_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>