<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Created by Murillo Comino on 09/02/19 12:26
  ~  * Github: github.com/MurilloComino
  ~  * StackOverFlow: pt.stackoverflow.com/users/128573
  ~  * Email: murillo_comino@hotmail.com
  ~  *
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 09/02/19 12:03
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                style="@style/Text_title"
                android:text="@string/title_invoice"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="9"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Text_Description_Menor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_title_invoice" />

                        <TextView
                            android:id="@+id/tv_title_invoice"
                            style="@style/Text_EditText_Menor"
                            android:layout_width="match_parent"
                            android:layout_height="28dp" />

                    </LinearLayout>

                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp">

                    </View>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Text_Description_Menor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_value" />

                        <LinearLayout
                            style="@style/Text_EditText_Menor"
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_value"
                                style="@style/Text_Description_Menor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textSize="13sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <TextView
                        style="@style/Text_Description_Menor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_desc_invoice" />

                    <TextView
                        android:id="@+id/tv_desc_invoice"
                        style="@style/Text_EditText_Menor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Text_Description_Menor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/desc_card" />


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                            <Spinner
                                android:id="@+id/sp_card"
                                android:layout_width="match_parent"
                                android:layout_height="38dp"
                                android:layout_gravity="center"
                                android:background="@drawable/spinner_background_sem_seta"
                                android:popupBackground="@drawable/spinner_background_checked"
                                android:spinnerMode="dropdown" />

                            <LinearLayout
                                android:id="@+id/ll_hint_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="38dp"
                                android:layout_centerInParent="true"
                                android:gravity="center"
                                android:padding="2dp"
                                android:paddingEnd="24dp"
                                android:visibility="gone">


                                <TextView
                                    style="@style/Text_Description"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/colorBackgroundEditext"

                                    android:gravity="center"
                                    android:text="@string/tv_card_deleted" />

                            </LinearLayout>
                        </RelativeLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp">

                    </View>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Text_Description_Menor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/desc_date" />

                        <LinearLayout
                            style="@style/Text_EditText_Menor"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_gravity="center_horizontal"
                                android:id="@+id/tv_selec_date"
                                style="@style/Text_Description_Menor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/tv_click_image"
                        style="@style/Text_Description_Menor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tv_cliquenaimagem"
                        android:textSize="8sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <ImageButton
                            android:id="@+id/ib_foto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:tag="main" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>


            <Button
                android:id="@+id/btn_editar"
                style="@style/Button_2_Sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_edit"
                android:text="@string/tv_editar"/>


            <Button
                android:id="@+id/btn_deletar"
                style="@style/Button_2_Sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_delete"
                android:text="@string/tv_deletar"/>

    </LinearLayout>
</LinearLayout>