<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Created by Murillo Comino on 09/02/19 12:26
  ~  * Github: github.com/MurilloComino
  ~  * StackOverFlow: pt.stackoverflow.com/users/128573
  ~  * Email: murillo_comino@hotmail.com
  ~  *
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 09/02/19 12:03
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                style="@style/Text_title"
                android:text="@string/title_invoice"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:baselineAligned="false">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text_Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_year"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite" />
                <View
                    android:layout_width="5dp"
                    android:layout_height="0dp"/>

                <Spinner
                    android:id="@+id/sp_year"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/spinner_background"
                    android:popupBackground="@drawable/spinner_background_checked"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <View
                android:layout_width="40dp"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text_Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_month"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite" />
                <View
                    android:layout_width="5dp"
                                   android:layout_height="1dp"/>

                <Spinner
                    android:id="@+id/sp_month"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/spinner_background"
                    android:popupBackground="@drawable/spinner_background_checked"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <android.support.design.widget.TabLayout
                android:id="@+id/tablayout_id"
                android:layout_width="match_parent"
                app:tabTextAppearance="@style/Text_Description_Bold"
                android:layout_height="30dp"
                app:tabTextColor="@color/colorWhiteTransparence"
                app:tabSelectedTextColor="@color/colorWhite"
                android:background="@color/colorText2"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/colorSpinner"
                app:tabMode="fixed">

            </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </android.support.v4.view.ViewPager>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <Button
                android:id="@+id/btn_adicionar"
                style="@style/Button_2_Sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_adicionar"
                android:text="@string/tv_adicionar" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
